--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -40,7 +40,7 @@ header{
       border-right: none;
       padding: 20px;
       box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-      @include background-opacity(1);
+      @include background-opacity(.7);
       z-index: 10;
       position: relative;
       a{
