--- a/styles/main.css
+++ b/styles/main.css
@@ -1002,7 +1002,7 @@ header {
   padding: 20px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
           box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  background: #ebecf1;
+  background: rgba(235, 236, 241, .7);
   z-index: 10;
   position: relative;
 }
