--- a/styles/main.css
+++ b/styles/main.css
@@ -69,41 +69,6 @@
   background: #ebecf1;
 }
 
-/* Underline From Center */
-.hvr-underline-from-center {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  overflow: hidden;
-}
-
-.hvr-underline-from-center:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 51%;
-  right: 51%;
-  bottom: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#BF953F), color-stop(#FCF6BA), color-stop(#B38728), color-stop(#FBF5B7), to(#AA771C));
-  background: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
-  height: 4px;
-  -webkit-transition-property: left, right;
-  transition-property: left, right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
-  left: 0;
-  right: 0;
-}
-
 .checkmark__circle {
   stroke-dasharray: 166;
   stroke-dashoffset: 166;
@@ -444,17 +409,6 @@
   animation-direction: alternate-reverse;
 }
 
-#gold-border {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  border-width: 4px;
-  border-style: solid;
-  -o-border-image: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
-     border-image: -webkit-gradient(linear, left top, right top, from(#BF953F), color-stop(#FCF6BA), color-stop(#B38728), color-stop(#FBF5B7), to(#AA771C));
-     border-image: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
-  border-image-slice: 1;
-}
-
 @-webkit-keyframes border {
   0% {
     width: 0;
@@ -493,409 +447,49 @@
   }
 }
 
-@-webkit-keyframes hvr-bob {
-  0% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
-  50% {
-    -webkit-transform: translateY(-4px);
-    transform: translateY(-4px);
-  }
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
+.wrong-animation {
+  -webkit-animation: wrong 1s forwards linear;
+          animation: wrong 1s forwards linear;
 }
 
-@keyframes hvr-bob {
-  0% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
+@-webkit-keyframes wrong {
+  from {
+    border-color: #1b1c25;
   }
-  50% {
-    -webkit-transform: translateY(-4px);
-    transform: translateY(-4px);
-  }
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
+  to {
+    border-color: #ff0033;
   }
 }
 
-@-webkit-keyframes hvr-bob-float {
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
+@keyframes wrong {
+  from {
+    border-color: #1b1c25;
+  }
+  to {
+    border-color: #ff0033;
   }
 }
 
-@keyframes hvr-bob-float {
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
+.correct-animation {
+  -webkit-animation: correct 1s forwards linear;
+          animation: correct 1s forwards linear;
+}
+
+@-webkit-keyframes correct {
+  from {
+    border-color: #1b1c25;
+  }
+  to {
+    border-color: #7ac142;
   }
 }
 
-.hvr-bob {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-          box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-}
-
-.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active, .hvr-bob-stay {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
-  background: #ebecf1;
-}
-
-/* Underline From Center */
-.hvr-underline-from-center {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  overflow: hidden;
-}
-
-.hvr-underline-from-center:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 51%;
-  right: 51%;
-  bottom: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#BF953F), color-stop(#FCF6BA), color-stop(#B38728), color-stop(#FBF5B7), to(#AA771C));
-  background: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
-  height: 4px;
-  -webkit-transition-property: left, right;
-  transition-property: left, right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
-  left: 0;
-  right: 0;
-}
-
-.checkmark__circle {
-  stroke-dasharray: 166;
-  stroke-dashoffset: 166;
-  stroke-width: 2;
-  stroke-miterlimit: 10;
-  stroke: #7ac142;
-  fill: none;
-  -webkit-animation: strokeCheck 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
-          animation: strokeCheck 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
-}
-
-.checkmark__circle.paused {
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-}
-
-.checkmark {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  display: block;
-  stroke-width: 2;
-  stroke: #fff;
-  stroke-miterlimit: 10;
-  margin: 10% auto;
-  -webkit-box-shadow: inset 0px 0px 0px #7ac142;
-          box-shadow: inset 0px 0px 0px #7ac142;
-  -webkit-animation: fillCheck .4s ease-in-out .4s forwards, scaleCheck .3s ease-in-out .9s both;
-          animation: fillCheck .4s ease-in-out .4s forwards, scaleCheck .3s ease-in-out .9s both;
-}
-
-.checkmark.paused {
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-}
-
-.checkmark__check {
-  -webkit-transform-origin: 50% 50%;
-          transform-origin: 50% 50%;
-  stroke-dasharray: 48;
-  stroke-dashoffset: 48;
-  -webkit-animation: strokeCheck 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
-          animation: strokeCheck 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
-}
-
-.checkmark__check.paused {
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-}
-
-@keyframes strokeCheck {
-  100% {
-    stroke-dashoffset: 0;
+@keyframes correct {
+  from {
+    border-color: #1b1c25;
   }
-}
-
-@keyframes scaleCheck {
-  0%, 100% {
-    -webkit-transform: none;
-            transform: none;
-  }
-  50% {
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-            transform: scale3d(1.1, 1.1, 1);
-  }
-}
-
-@keyframes fillCheck {
-  100% {
-    -webkit-box-shadow: inset 0px 0px 0px 30px #7ac142;
-            box-shadow: inset 0px 0px 0px 30px #7ac142;
-  }
-}
-
-.crossmark__circle {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-  stroke-dasharray: 166;
-  stroke-dashoffset: 166;
-  stroke-width: 2;
-  stroke-miterlimit: 10;
-  stroke: #ff0033;
-  fill: none;
-  -webkit-animation: strokeCross 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
-          animation: strokeCross 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
-}
-
-.crossmark__circle.paused {
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-}
-
-.crossmark {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  display: block;
-  stroke-width: 2;
-  stroke: #fff;
-  stroke-miterlimit: 10;
-  margin: 10% auto;
-  -webkit-box-shadow: inset 0px 0px 0px #ff0033;
-          box-shadow: inset 0px 0px 0px #ff0033;
-  -webkit-animation: fillCross .4s ease-in-out .4s forwards, scaleCross .3s ease-in-out .9s both;
-          animation: fillCross .4s ease-in-out .4s forwards, scaleCross .3s ease-in-out .9s both;
-}
-
-.crossmark.paused {
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-}
-
-.crossmark__check {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-  -webkit-transform-origin: 50% 50%;
-          transform-origin: 50% 50%;
-  stroke-dasharray: 48;
-  stroke-dashoffset: 48;
-  -webkit-animation: strokeCross 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
-          animation: strokeCross 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
-}
-
-.crossmark__check.paused {
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-}
-
-.fade-in {
-  opacity: 1;
-  -webkit-animation-name: fadeInOpacity;
-          animation-name: fadeInOpacity;
-  -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
-  -webkit-animation-timing-function: ease-in;
-          animation-timing-function: ease-in;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
-}
-
-@keyframes strokeCross {
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-
-@keyframes scaleCross {
-  0%, 100% {
-    -webkit-transform: none;
-            transform: none;
-  }
-  50% {
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-            transform: scale3d(1.1, 1.1, 1);
-  }
-}
-
-@keyframes fillCross {
-  100% {
-    -webkit-box-shadow: inset 0px 0px 0px 30px #ff0033;
-            box-shadow: inset 0px 0px 0px 30px #ff0033;
-  }
-}
-
-.slide-up-fade-in {
-  animation: slide-up-fade-in ease 1s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  animation-fill-mode: forwards;
-  /*when the spec is finished*/
-  -webkit-animation: slide-up-fade-in ease 1s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-transform-origin: 50% 50%;
-  -webkit-animation-fill-mode: forwards;
-  /*Chrome 16+, Safari 4+*/
-  -moz-animation: slide-up-fade-in ease 1s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 50% 50%;
-  -moz-animation-fill-mode: forwards;
-  /*FF 5+*/
-  -o-animation: slide-up-fade-in ease 1s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 50% 50%;
-  -o-animation-fill-mode: forwards;
-  /*Not implemented yet*/
-  -ms-animation: slide-up-fade-in ease 1s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 50% 50%;
-  -ms-animation-fill-mode: forwards;
-  /*IE 10+*/
-  opacity: 0;
-  opacity: 1\9;
-}
-
-@keyframes slide-up-fade-in {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate(0px, 40px);
-            transform: translate(0px, 40px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px);
-  }
-}
-
-@-webkit-keyframes slide-up-fade-in {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate(0px, 40px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translate(0px, 0px);
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeInRight {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(100%, 0, 0);
-            transform: translate3d(100%, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-            transform: none;
-  }
-}
-
-.m-scene {
-  /** Basic styles for an animated element */
-  /** An element that fades in */
-}
-
-.m-scene .scene_element {
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-transition-timing-function: ease-in;
-          transition-timing-function: ease-in;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-}
-
-.m-scene .scene_element--fadein {
-  -webkit-animation-name: fadeIn;
-          animation-name: fadeIn;
-}
-
-.m-scene .scene_element--fadeInRight {
-  -webkit-animation-name: fadeInRight;
-          animation-name: fadeInRight;
-}
-
-.m-scene.is-exiting .scene_element {
-  animation-direction: alternate-reverse;
-}
-
-#gold-border {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  border-width: 4px;
-  border-style: solid;
-  -o-border-image: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
-     border-image: -webkit-gradient(linear, left top, right top, from(#BF953F), color-stop(#FCF6BA), color-stop(#B38728), color-stop(#FBF5B7), to(#AA771C));
-     border-image: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
-  border-image-slice: 1;
-}
-
-@keyframes border {
-  0% {
-    width: 0;
-    height: 0;
-  }
-  25% {
-    width: 100%;
-    height: 0;
-  }
-  50% {
-    width: 100%;
-    height: 100%;
-  }
-  100% {
-    width: 100%;
-    height: 100%;
+  to {
+    border-color: #7ac142;
   }
 }
 
@@ -932,14 +526,14 @@ body {
   height: 100%;
   top: 0;
   z-index: 0;
-  -webkit-filter: blur(12px);
-          filter: blur(12px);
   background-size: cover !important;
   background-position: center !important;
   -webkit-transition: -webkit-filter 2s;
   transition: -webkit-filter 2s;
   transition: filter 2s;
   transition: filter 2s, -webkit-filter 2s;
+  -webkit-filter: blur(12px);
+          filter: blur(12px);
   left: 0;
 }
 
@@ -966,14 +560,14 @@ body {
   height: 100%;
   top: 0;
   z-index: 0;
-  -webkit-filter: blur(12px);
-          filter: blur(12px);
   background-size: cover !important;
   background-position: center !important;
   -webkit-transition: -webkit-filter 2s;
   transition: -webkit-filter 2s;
   transition: filter 2s;
   transition: filter 2s, -webkit-filter 2s;
+  -webkit-filter: blur(12px);
+          filter: blur(12px);
   right: 0;
 }
 
@@ -1002,7 +596,7 @@ header {
   padding: 20px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
           box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  background: rgba(235, 236, 241, .7);
+  background: rgba(235, 236, 241, 0.7);
   z-index: 10;
   position: relative;
 }
@@ -1027,7 +621,7 @@ nav a {
   text-decoration: none;
   padding: 0px 20px;
   color: rgba(27, 28, 37, 0.3);
-  font-size-adjust: .3;
+  font-size: 20px;
 }
 
 nav a:hover {
@@ -1049,6 +643,8 @@ nav a:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .item-container {
@@ -1091,7 +687,6 @@ nav a:hover {
   text-align: center;
   margin: 0;
   color: #ebecf1;
-  -webkit-text-stroke: 1px #1b1c25;
   text-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
@@ -1109,7 +704,6 @@ nav a:hover {
   width: 80%;
   padding-left: 10%;
   padding-right: 10%;
-  padding-top: 5vh;
   z-index: 10;
 }
 
@@ -1151,7 +745,6 @@ nav a:hover {
   padding-left: 10%;
   padding-right: 10%;
   z-index: 10;
-  margin-top: 10vh;
 }
 
 .left-empty, .right-empty {
@@ -1171,6 +764,14 @@ nav a:hover {
   visibility: hidden;
 }
 
+.score {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: #ebecf1;
+  padding-right: 1em;
+}
+
 .request-form {
   text-align: center;
 }
@@ -1186,6 +787,10 @@ nav a:hover {
   }
   .cost-container {
     width: 100%;
+  }
+  .score {
+    bottom: unset;
+    top: 12vh;
   }
   .left-cost h1, .right-cost h1 {
     font-size-adjust: .4;
@@ -1598,15 +1203,6 @@ nav a:hover {
           animation: wrong 1s forwards linear;
 }
 
-@-webkit-keyframes wrong {
-  from {
-    border-color: #1b1c25;
-  }
-  to {
-    border-color: #ff0033;
-  }
-}
-
 @keyframes wrong {
   from {
     border-color: #1b1c25;
@@ -1619,15 +1215,6 @@ nav a:hover {
 .correct-animation {
   -webkit-animation: correct 1s forwards linear;
           animation: correct 1s forwards linear;
-}
-
-@-webkit-keyframes correct {
-  from {
-    border-color: #1b1c25;
-  }
-  to {
-    border-color: #7ac142;
-  }
 }
 
 @keyframes correct {
